<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star"
            android:title="Principal" />
        <item
            android:id="@+id/M6"
            android:title="@string/m6_acc_s_a_dades">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_M6UF1"
                        android:title="@string/uf1_persist_ncia_en_fiters"
                        />
                    <item
                        android:id="@+id/nav_M6UF2"
                        android:title="@string/persist_ncia_en_bdr_bdor_bdoo"
                        />
                    <item
                        android:id="@+id/nav_M6UF3"
                        android:title="@string/persist_ncia_en_bd_natives_xml"
                        />
                    <item
                        android:id="@+id/nav_M6UF4"
                        android:title="@string/components_d_acc_s_a_dades"
                        />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/M7"
            android:title="@string/m7_desenvolupament_d_interficies">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_M7UF1"
                        android:title="@string/uf1_disseny_i_implementaci_d_interf_cies"
                        />
                    <item
                        android:id="@+id/nav_M7UF2"
                        android:title="@string/uf2_preparaci_i_distribuci_d_aplicacions"
                        />

                </group>
            </menu>
        </item>
        <item
            android:id="@+id/M8"
            android:title="@string/m8_programaci_multim_dia_i_dispositius_m_bils">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_M8UF1"
                        android:title="@string/uf1_desenvolupament_d_aplicacions_per_dispositius_m_bils"
                        />
                    <item
                        android:id="@+id/nav_M8UF2"
                        android:title="@string/uf2_programaci_multim_dia"
                        />
                    <item
                        android:id="@+id/nav_M8UF3"
                        android:title="@string/uf3_desenvolupament_de_jocs_per_dispositius_m_bils"
                        />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/M9"
            android:title="@string/m0_programaci_de_serveis_i_processos">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_M9UF1"
                        android:title="@string/uf1_seguretat_i_criptografia"
                        />
                    <item
                        android:id="@+id/nav_M9UF2"
                        android:title="@string/uf2_processos_i_fils"
                        />
                    <item
                        android:id="@+id/nav_M9UF3"
                        android:title="@string/uf3_s_cols_i_serveis"
                        />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/M10"
            android:title="@string/m10_sistemes_de_gesti_empresarial">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_M10UF1"
                        android:title="@string/uf1_sistemes_erp_crm_implantaci"
                        />
                    <item
                        android:id="@+id/nav_M10UF2"
                        android:title="@string/uf2_sistemes_erp_crm_explotaci_i_adequaci"
                        />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/M13"
            android:title="M13 - Projecte de desenvolupament d'aplicacions multiplataforma">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_M13UF1"
                        android:title="UF1 - Projecte"
                        />
                </group>
            </menu>
        </item>


    </group>
</menu>